Roundcube Webmail MarkASJunk2
=============================

2009 10 29
==========
 * Rename plugin to markasjunk2

2009 10 29
==========
 * Use local_skin_path() (rev 3076)

2009 08 02
==========
 * Added ability to mark ham as unread
 * Added ability to flag/unflag spam/ham
 * Added ability to trigger sa-learn
 * Added config file to control new options