@@ -1,6 +1,10 @@
 Roundcube Webmail MarkASJunk2
 =============================
 
+2009 10 31
+==========
+ * Create driver based system for different learning methods
+
 2009 10 29
 ==========
  * Rename plugin to markasjunk2
